--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ description: (I Think It's Going To Be A Long Long Time)
 logo: site-logo.svg
 search: true
 
-#url: https://therocketeers.cr.rs
-url: http://localhost:4000
-dev: true
+url: https://therocketeers.cr.rs
+#url: http://localhost:4000
+dev: false
 # common url for images and other external data  
 external_data_url: https://raw.githubusercontent.com/theHeartsRocketeers/rocketeers-image-cdn/master
 # Jekyll configuration
